# tokencur

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  subscriptions.json
.github/workflows/: ci.yml  price-watch.yml
docs/: RESEARCH.md  index.html
docs/observatory/: data.json  index.html
docs/prices/: index.html
scripts/: probe_runpod.py  update_pricing_snapshot.py  validate_focus.py
src/tokencur/: __init__.py  __main__.py  dashboard.py  export.py  focus.py  observatory.py  prices.py  pricing.py  recommend.py  recommend_cli.py  report.py
src/tokencur/ingest/: __init__.py  claude_code.py  codex.py  kimi_code.py
src/tokencur/pricing_data/: litellm_snapshot.json
tests/: test_claude_code.py  test_codex.py  test_dashboard.py  test_focus.py  test_focus_cross.py  test_kimi_code.py  test_observatory.py  test_prices.py  test_pricing.py  test_recommend.py  test_report.py
tests/fixtures/: README.md  focus_sample_official_slice.csv
