[project]
name = "tokencur"
version = "0.1.0"
description = "Convert multi-provider AI/LLM usage data into FOCUS-conformant cost datasets"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Pedro Aguayo Chávez", email = "aguayochavezpedro@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
dashboard = ["streamlit>=1.35", "duckdb>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokencur = ["pricing_data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
